--- a/public/style.css
+++ b/public/style.css
@@ -390,3 +390,114 @@ footer {
 .col-sm-1:last-child {
     color: red;
 }
+
+body {
+    background-image: url("img/image.png");
+    background-color: #cccccc;
+}
+
+#randomizeButton {
+    width: 500px;
+    height: 170px;
+}
+
+button {
+    cursor: pointer;
+    position: relative;
+    padding: 2.5rem 7.5rem;
+    border-radius: 3.75rem;
+    line-height: 2.5rem;
+    font-size: 2rem;
+    font-weight: 600;
+    color: white;
+    border: 1px solid yellow;
+    background-image: linear-gradient(-180deg, #ffdb89 0%, #c0801f 100%);
+    box-shadow: 0 1rem 1.25rem 0 rgba(195, 150, 22, 0.5), 0 -0.25rem 1.5rem rgb(155, 118, 15) inset, 0 0.75rem 0.5rem rgba(255, 255, 255, 0.4) inset, 0 0.25rem 0.5rem 0 rgb(207, 171, 70) inset
+}
+
+button span {
+    color: transparent;
+    background-image: linear-gradient(0deg, #EE82DA 0%, #FEFAFD 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    filter: drop-shadow(0 2px 2px hsla(290, 100%, 20%, 1));
+}
+
+button::before {
+    content: "";
+    display: block;
+    height: 0.25rem;
+    position: absolute;
+    top: 0.5rem;
+    left: 50%;
+    transform: translateX(-50%);
+    width: calc(100% - 7.5rem);
+    background: #fff;
+    border-radius: 100%;
+
+    opacity: 0.7;
+    background-image: linear-gradient(-270deg, rgba(255, 255, 255, 0.00) 0%, #FFFFFF 20%, #FFFFFF 80%, rgba(255, 255, 255, 0.00) 100%);
+}
+
+button::after {
+    content: "";
+    display: block;
+    height: 0.25rem;
+    position: absolute;
+    bottom: 0.75rem;
+    left: 50%;
+    transform: translateX(-50%);
+    width: calc(100% - 7.5rem);
+    background: #fff;
+    border-radius: 100%;
+
+    filter: blur(1px);
+    opacity: 0.05;
+    background-image: linear-gradient(-270deg, rgba(255, 255, 255, 0.00) 0%, #FFFFFF 20%, #FFFFFF 80%, rgba(255, 255, 255, 0.00) 100%);
+}
+
+h1 {
+    color: yellow;
+    font-size: 120px;
+    text-shadow: -5px 0 orangered, 0 5px orangered, 5px 0 orangered, 0 -5px orangered;
+}
+
+.spinner {
+    text-align: center;
+    animation-name: spin, depth;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-duration: 3s;
+}
+
+@keyframes spin {
+    from {
+        transform: rotateZ(0deg);
+    }
+
+    to {
+        transform: rotateZ(-360deg);
+    }
+}
+
+@keyframes depth {
+    0% {
+        text-shadow: 0 0 black;
+    }
+
+    25% {
+        text-shadow: 1px 0 black, 2px 0 black, 3px 0 black, 4px 0 black, 5px 0 black;
+    }
+
+    50% {
+        text-shadow: 0 0 black;
+    }
+
+    75% {
+        text-shadow: -1px 0 black, -2px 0 black, -3px 0 black, -4px 0 black, -5px 0 black;
+    }
+
+    100% {
+        text-shadow: 0 0 black;
+    }
+}
