--- a/public/style.css
+++ b/public/style.css
@@ -31,7 +31,13 @@ code {
 
 h1 {
     text-align: center;
-    padding-bottom: 25px;
+    font-size: 100px;
+}
+
+h2 {
+    font-size: 50px;
+    text-align: center;
+    padding-bottom: 10px;
 }
 
 .container {
@@ -416,11 +422,11 @@ button {
 }
 
 button span {
-    color: transparent;
-    background-image: linear-gradient(0deg, #EE82DA 0%, #FEFAFD 100%);
+    /* background-image: linear-gradient(0deg, #EE82DA 0%, #FEFAFD 100%); */
     -webkit-background-clip: text;
     background-clip: text;
-    filter: drop-shadow(0 2px 2px hsla(290, 100%, 20%, 1));
+    color: #922403;
+    /* filter: drop-shadow(0 2px 2px hsla(290, 100%, 20%, 1)); */
 }
 
 button::before {
@@ -456,9 +462,9 @@ button::after {
     background-image: linear-gradient(-270deg, rgba(255, 255, 255, 0.00) 0%, #FFFFFF 20%, #FFFFFF 80%, rgba(255, 255, 255, 0.00) 100%);
 }
 
-h1 {
+h1,
+h2 {
     color: yellow;
-    font-size: 120px;
     text-shadow: -5px 0 orangered, 0 5px orangered, 5px 0 orangered, 0 -5px orangered;
 }
 
@@ -500,4 +506,119 @@ h1 {
     100% {
         text-shadow: 0 0 black;
     }
+}
+
+.blur {
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(5px);
+}
+
+a.btn {
+    width: 150px;
+    display: block;
+    margin: -25px 0 0 -75px;
+    padding: 1em 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font: 1.125em 'Arial', sans-serif;
+    font-weight: 700;
+    text-align: center;
+    text-decoration: none;
+    color: #fff;
+    border-radius: 5px;
+    background: rgba(217, 67, 86, 1);
+}
+
+.modal-wrapper {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(255, 257, 153, 0.75);
+    visibility: hidden;
+    opacity: 0;
+    -webkit-transition: all 0.25s ease-in-out;
+    -moz-transition: all 0.25s ease-in-out;
+    -o-transition: all 0.25s ease-in-out;
+    transition: all 0.25s ease-in-out;
+}
+
+.modal-wrapper.open {
+    opacity: 1;
+    visibility: visible;
+}
+
+.modal {
+    width: 80%;
+    height: 100px;
+    display: block;
+    /* margin: 75% 0 0 -100px; */
+    position: relative;
+    top: 25%;
+    background: #fff;
+    opacity: 0;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+}
+
+.modal-wrapper.open .modal {
+    margin-top: -200px;
+    opacity: 1;
+}
+
+.head {
+    width: 90%;
+    height: 32px;
+    padding: 1.5em 5%;
+    overflow: hidden;
+    background: #01bce5;
+}
+
+.btn-close {
+    width: 32px;
+    height: 32px;
+    display: block;
+    float: right;
+}
+
+.btn-close::before,
+.btn-close::after {
+    content: '';
+    width: 32px;
+    height: 6px;
+    display: block;
+    background: #fff;
+}
+
+.btn-close::before {
+    margin-top: 12px;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+.btn-close::after {
+    margin-top: -6px;
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+}
+
+.content {
+    padding: 5%;
+}
+
+#wish_message {
+    color: yellow;
+    font-size: 40px;
+    margin: auto;
 }
